tests/test_proof/good/array_length.catala_en
## Test

```catala
declaration scope A:
  context x content collection integer
  context y content boolean

scope A:
  definition x equals [0; 5]
  definition y under condition (number of x) > 0 consequence equals true
  definition y under condition (number of x) = 0 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/good/array_length.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
[RESULT] No errors found during the proof mode run.
```
